# currency_checker

./: Dockerfile  Makefile  README.md  docker-compose.cloud.yaml  docker-compose.vm.yaml  docker-compose.yaml  locustfile.py  pyproject.toml
.github/workflows/: code-quality.yml
conf/: .env.example
currency_checker/: __init__.py
currency_checker/api/: __main__.py  application.py  models.py
currency_checker/api/routes/: courses.py  docs.py  system.py
currency_checker/domain/: exceptions.py  models.py
currency_checker/domain/api_clients/: __init__.py  base.py  binance.py  coingeko.py
currency_checker/domain/exchange_clients/: __init__.py  base.py  binance.py  coingeko.py
currency_checker/domain/services/: __init__.py  base.py  binance.py  coingeko.py
currency_checker/domain/storages/: accounts.py  currency.py
currency_checker/infrastructure/: logging.py  metrics.py  postgres.py  settings.py
currency_checker/infrastructure/base_api_client/: base_client.py  base_throttler.py  exceptions.py  metrics.py  requests.py  responses.py
currency_checker/infrastructure/migrations/: alembic.ini  env.py
currency_checker/infrastructure/migrations/versions/: 2024-02-07_0e6800259bd9_accounts_table.py  2024-02-08_0f1688dfb6d2_active_flag.py  2024-02-08_3ef8c14c50b3_unique_pair_token_and_source.py
currency_checker/scheduler/: __main__.py  broker.py  jobs.py  utils.py
docker/: entrypoint  json-logging.yaml
tests/: test_liniting.py
